[package]
name = "examples"
version = "0.0.1"
publish = false
edition = "2018"

[dependencies]
vmm = { path = "../vmm" }
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.10.0"
libc = ">=0.2.39"
lazy_static = "1.4.0"


[[example]]
name = "achilles"
path = "achilles.rs"
